# Tactigon-Sunrise

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  build_debug.sh  build_debug_msgs.sh  build_docker.sh  build_msgs.sh  docker-compose.yml  entrypoint.sh  launch.sh  requirements.txt  sunrise_app.py  test_camera_tracking.py  test_comau.py  test_hand.py  test_interface.py  test_mission_controller.py  test_sunrise.py  ttt.py
config/: braccio_ros.json  (+11 more)
src/sunrise/: CMakeLists.txt  package.xml  setup.py
src/sunrise/sunrise/mission_controller/: __init__.py  main.py  msg.py  node.py
src/sunrise/sunrise/mission_controller/leo/: __init__.py  models.py
src/sunrise/sunrise/mission_controller/models/: mission_controller.py  robots.py  skill.py  task.py
src/sunrise/sunrise/mission_controller/teo/: __init__.py  models.py
src/sunrise/sunrise/sunrise_braccio/: main.py  models.py  node.py
src/sunrise/sunrise/sunrise_bridge/: __init__.py  bridge.py  main.py  models.py
src/sunrise/sunrise/sunrise_comau/: main.py  models.py  node.py
src/sunrise/sunrise/sunrise_tactigon/: main.py  models.py  node.py
src/sunrise/sunrise/sunrise_tactigon_mock/: main.py  node.py
src/sunrise_msgs/: CMakeLists.txt  package.xml
src/sunrise_msgs/msg/: Action.msg  BraccioResponse.msg  Gesture.msg  Intent.msg  Marker.msg  MarkerList.msg  Point2D.msg  Transcription.msg
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_bringup/: CMakeLists.txt  README.md  package.xml
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_bringup/config/: general_config.yaml
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_bringup/launch/: start_comau_client.launch.py
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_description/racer7-14_description/: CMakeLists.txt  package.xml
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_description/racer7-14_description/launch/: racer7-14_upload.launch.py  view_racer7-14.launch.py  view_racer7-14.rviz
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_description/racer7-14_description/meshes/racer7-14/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_description/racer7-14_description/robots/: racer7-14_robot.urdf.xacro
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_description/racer7-14_description/ros2_control/: racer7-14.ros2_control.xacro
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_description/racer7-14_description/urdf/: comau_common.macro.xacro
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_description/racer7-14_description/urdf/racer7-14/: racer7-14.urdf.xacro
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_driver/comau_driver/: CMakeLists.txt  package.xml
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_driver/comau_driver/include/comau_driver/: comau_driver.hpp
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_driver/comau_driver/src/: comau_driver.cpp  comau_driver_node.cpp
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_driver/comau_handlers/: CMakeLists.txt  README.md  package.xml
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_driver/comau_handlers/include/comau_handlers/: execute_cartesian_trajectory_handler.hpp  execute_joint_trajectory_handler.hpp  trajectory_handler.hpp
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_driver/comau_handlers/src/: execute_cartesian_trajectory_handler.cpp  execute_joint_trajectory_handler.cpp  execute_trajectory_handler_node.cpp  trajectory_handler.cpp
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_driver/comau_hardware_interface/: CMakeLists.txt  comau_hardware_interface.xml  package.xml
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_driver/comau_hardware_interface/config/: robot_controller.yaml
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_driver/comau_hardware_interface/include/comau_hardware_interface/: comau_control.hpp  comau_hw_interface.hpp
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_driver/comau_hardware_interface/src/: comau_control.cpp  comau_hw_interface.cpp  comau_robot_interface_node.cpp
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_driver/comau_tcp_interface/: CMakeLists.txt  comau_tcp_client_plugins.xml  package.xml
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_driver/comau_tcp_interface/include/comau_tcp_interface/: comau_client_base.hpp  comau_robot_client.hpp  comau_state_client.hpp  comau_tcp_interface.hpp
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_driver/comau_tcp_interface/src/: comau_state_client_node.cpp
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_example/: CMakeLists.txt  README.md  package.xml
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_example/include/comau_example/: ex_trj_handler.hpp
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_example/src/: ex_trj_handler.cpp  execute_example_node.cpp
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_msgs/: CMakeLists.txt  package.xml
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_msgs/action/: ExecuteCartesianTrajectory.action  ExecuteJointTrajectory.action
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_msgs/msg/: ActionFeedback.msg  ActionFeedbackStatusConstants.msg  ActionRequest.msg  ActionResult.msg  CartesianPoseStamped.msg  ComauOperationMode.msg  ComauRobotStatus.msg  ComauServerError.msg  Digital.msg  IOStates.msg  JointPose.msg  SnsTrkPlot.msg
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_msgs/srv/: ControllerWrapper.srv  GripperCommand.srv  OpenConnection.srv  SetArmState.srv  SetIO.srv  SetMoveFlyParams.srv  SetSnsTrkParams.srv  SnsTrkPlotReset.srv
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_viz/: CMakeLists.txt  README.md  package.xml
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_viz/launch/: view_racer7-14.launch.py
sunrise_robot/COMAU-ROS2-DRIVER/comau_ros2_client/comau_viz/rviz/: basic.rviz  moveit.rviz  view_robot.rviz
(+159 files in other folders)
