<?xml version="1.0"?>
<package format="3">
  <name>comau_msgs</name>
  <version>0.1.0</version>
  <description>The comau_msgs package</description>

  <author>Comau Robotics S.p.A</author>
  <maintainer email="andrea.perica@comau.com">Comau Robotics S.p.A.</maintainer>
  <maintainer email="giulia.nicastro@external.comau.com">Comau Robotics S.p.A.</maintainer>

  <license>BSD-2-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  
  <depend>action_msgs</depend>    
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>shape_msgs</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  
  <member_of_group>rosidl_interface_packages</member_of_group>
  



  <export>
   <build_type>ament_cmake</build_type>
  </export>
</package>




