<?xml version="1.0"?>
<package format="2">
  <name>comau_viz</name>
  <version>1.1.0</version>
  <description>The comau_viz package</description>

  <author>Comau Robotics S.p.A</author>
  <maintainer email="andrea.perica@comau.com">Comau Robotics S.p.A.</maintainer>
  <maintainer email="giulia.nicastro@external.comau.com">Comau Robotics S.p.A.</maintainer>

  <license>BSD-2-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
    
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!--<exec_depend>aura_description</exec_depend> -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
   <build_type>ament_cmake</build_type>
  </export>

</package>
