<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>comau_driver</name>
  <version>0.0.0</version>
  <description>Comau driver msg structure composition</description>

  <author>Comau Robotics S.p.A</author>
  <maintainer email="andrea.perica@comau.com">Comau Robotics S.p.A.</maintainer>
  <maintainer email="giulia.nicastro@external.comau.com">Comau Robotics S.p.A.</maintainer>

  <license>BSD-2-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>comau_tcp_interface</depend> 

  <depend>Boost</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

