<?xml version="1.0"?>
<package format="3">
  <name>comau_tcp_interface</name>
  <version>0.0.0</version>
  <description>The comau_tcp_interface package</description>

  <author>Comau Robotics S.p.A</author>
  <maintainer email="andrea.perica@comau.com">Comau Robotics S.p.A.</maintainer>
  <maintainer email="giulia.nicastro@external.comau.com">Comau Robotics S.p.A.</maintainer>
  
  <license>BSD-2-Clause</license>

  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>class_loader</depend>
  <depend>rcutils</depend>
  <depend>comau_msgs</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rosdoc config="doc/rosdoc.yaml" />
    <comau_tcp_interface plugin="${prefix}/comau_tcp_client_plugins.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>